syntax = "proto3";

option go_package = "github.com/the-swiply/chat/pkg/api/chat";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

package swiply.chat;

service Chat {
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse){
    option (google.api.http) = {
      post: "/v1/message/send"
      body: "*"
    };
  }

  rpc GetNextMessages(GetNextMessagesRequest) returns (GetNextMessagesResponse){
    option (google.api.http) = {
      get: "/v1/message/get-next"
    };
  }

  rpc GetPreviousMessages(GetPreviousMessagesRequest) returns (GetPreviousMessagesResponse){
    option (google.api.http) = {
      get: "/v1/message/get-previous"
    };
  }

  rpc GetChats(GetChatsRequest) returns (GetChatsResponse){
    option (google.api.http) = {
      get: "/v1/chats"
    };
  }

  rpc LeaveChat(LeaveChatRequest) returns (LeaveChatResponse){
    option (google.api.http) = {
      post: "/v1/chat/leave/{chat_id}"
    };
  }

  rpc CreateChat(CreateChatRequest) returns (CreateChatResponse){
    option (google.api.http) = {
      post: "/v1/chat/create"
      body: "*"
    };
  }

  rpc AddChatMembers(AddChatMembersRequest) returns (AddChatMembersResponse){
    option (google.api.http) = {
      post: "/v1/chat/add-members"
      body: "*"
    };
  }
}

message SendMessageRequest {
  int64 chat_id = 1;
  string content = 2;
}

message SendMessageResponse {}

message GetNextMessagesRequest {
  int64 chat_id = 1;
  int64 starting_from = 2;
  int64 limit = 3;
}

message GetNextMessagesResponse {
  repeated ChatMessage messages = 1;
}

message GetPreviousMessagesRequest {
  int64 chat_id = 1;
  int64 starting_from = 2;
  int64 limit = 3;
}

message GetPreviousMessagesResponse {
  repeated ChatMessage messages = 1;
}

message GetChatsRequest {}

message GetChatsResponse{
  repeated GenericChat chats = 1;
}

message LeaveChatRequest {
  int64 chat_id = 1;
}

message LeaveChatResponse {}

message CreateChatRequest {
  repeated string members = 1;
}

message CreateChatResponse {
  int64 chat_id = 1;
}

message AddChatMembersRequest {
  int64 chat_id = 1;
  repeated string members = 2;
}

message AddChatMembersResponse{}

message ChatMessage {
  string id = 1;
  int64 chat_id = 2;
  int64 id_in_chat = 3;
  string from_id = 4;
  string content = 5;
  google.protobuf.Timestamp send_time = 6;
}

message GenericChat {
  int64 id = 1;
  repeated string members = 2;
}
